0.9.7:

2006-03-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/db_adddel/db_adddel.cc: on_cell_button_clicked(): 
	Do not interpret an edit request on a placeholder row as a request to add. This 
	means that Glom switches to an empty details view instead, as you would expect.

2006-03-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/db_adddel/glom_db_treemodel.cc: refresh_from_database(): 
	If there are no rows it is not an error. There are just no records in the table 
	yet.

2006-03-07  Murray Cumming  <murrayc@murrayc.com>

	* glom/data_structure/layout/layoutitem_field.cc: get_editable_and_allowed():
	Report calculated fields as always non-editable.
	* glom/layout_item_dialogs/dialog_field_layout.cc: set_field(): Do not allow 
	calculated fields to be editable, by graying-out the checkbox.
	* glom/main.cc: Translate the command-line options, and add a --version 
	option.
	* glom/utility_widgets/comboglomchoicesbase.cc: set_choices_with_second(): 
	For the optional second column in the popdown, use the correct formatting, 
	instead of reusing the formatting from the first column.
	* glom/utility_widgets/datawidget.cc: set_editable(): For ComboBoxEntry 
	widgets, set the child entry as non-editable.

2006-03-07  Murray Cumming  <murrayc@murrayc.com>

	* glom/main.cc: Call PySys_SetArgv, to prevent use of pygtk from 
	crashing when using pygtk 2.9/2.10.
	* glom/mode_data/dialog_layout_details.cc: on_cell_data_name(): Name buttons as 
	buttons in the name column, instead of leaving it blank.

2006-03-07  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc: on_document_load(): When saving from an example, temporarily increase 
	the user level, so that save_changes() always saves.
	* glom/document/document_glom.cc: 
	set_modified(): Save even if modified is already set, because this can happen 
	after unblocking save-on-modified. If there are endless loops then we need to 
	fix them elsewhere instead.