@@ -1,3 +1,8 @@
+2006-03-08  Murray Cumming  <murrayc@murrayc.com>
+
+	* glom/data_structure/glomconversions.cc: parse_value(): If parsing of the time 
+	fails, fall back to trying the C locale. This is usually necessary. No idea why.
+
 0.9.7:
 
 2006-03-08  Murray Cumming  <murrayc@murrayc.com>
